--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.tcp.rewaed">
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -65,6 +69,26 @@
 
                 <data android:mimeType="text/plain" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.textdetector.ChooserActivity"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".ui.textdetector.LivePreviewActivity"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".ui.textdetector.CameraXLivePreviewActivity"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".ui.textdetector.CameraXSourceDemoActivity"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".ui.textdetector.StillImageActivity"
+            android:exported="false">
         </activity>
         <meta-data
             android:name="com.google.mlkit.vision.DEPENDENCIES"
