--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,10 @@
             <data android:mimeType="text/plain" />
         </intent>
 
+        <intent>
+            <action android:name="android.intent.action.TTS_SERVICE" />
+        </intent>
+
     </queries>
 
     <application
