--- a/app/build.gradle
+++ b/app/build.gradle
@@ -170,4 +170,6 @@ dependencies {
     implementation "com.google.android.odml:image:1.0.0-beta1"
 
     implementation "com.airbnb.android:lottie:3.6.1"
+
+    implementation 'ai.picovoice:porcupine-android:3.0.0'
 }
